--- a/404.md
+++ b/404.md
@@ -1,6 +1,10 @@
+---
+title: 'Page Not Found'
+layout: "404"
+---
+
 # Page Not Found
 
 [Return to CIO.gov]("http://cio.gov")
 
 Last Update August 8, 10:48am
-
