--- a/_plays/02.md
+++ b/_plays/02.md
@@ -1,6 +1,7 @@
-##### PLAY 2
-
-## Address the whole experience, from start to finish
+---
+id: 2
+title: Address the whole experience, from start to finish
+---
 
 We must build digital services with an understanding of the range of ways a person might interact with our service, including the actions they take online, through a mobile application, on the phone, or in person. Every encounter should move the user closer towards the desired outcome, whether that encounter is online or offline.
 
