--- a/_plays/03.md
+++ b/_plays/03.md
@@ -1,12 +1,13 @@
-##### PLAY 3
-
-## Make it simple and intuitive
+---
+id: 3
+title: Make it simple and intuitive
+---
 
 Using a government service shouldn’t be stressful, confusing, or daunting — it’s our job to build services that are simple and intuitive enough that users succeed the first time, unaided.
 
 #### checklist
 1. Create or use an existing, simple, and flexible design style guide for the service
-2. Use the design style guide across related digital services 
+2. Use the design style guide across related digital services
 3. Provide users with clear information about where they are in the process as they use the service
 4. Follow accessibility best practices to ensure all people can use the service
 5. Provide users with a way to exit and return later to complete the process
