--- a/_plays/06.md
+++ b/_plays/06.md
@@ -1,6 +1,7 @@
-##### PLAY 6
-
-## Assign one leader and hold that person accountable
+---
+id: 6
+title: Assign one leader and hold that person accountable
+---
 
 There must be a single product owner who has the authority and responsibility across teams to assign tasks and work elements; make business, product, and technical decisions; and is accountable for the success or failure of the overall service. This product owner is ultimately responsible for how well the service is meeting the needs of its users, which is how a service should be evaluated. The product owner is responsible for ensuring the features are built and managing the feature and bug backlogs.
 
