--- a/_plays/08.md
+++ b/_plays/08.md
@@ -1,6 +1,7 @@
-##### PLAY 8
-
-## Choose a modern technology stack
+---
+id: 8
+title: Choose a modern technology stack
+---
 
 The technology decisions we make need to enable development teams to work efficiently and enable services to scale easily and cost-effectively. Our choices for hosting infrastructure, databases, software frameworks, programming languages and the rest of the technology stack should seek to avoid vendor lock-in and match what successful modern consumer and enterprise software companies would choose today. In particular, digital services teams should consider using open source, cloud based, and commodity solutions across the technology stack, as these solutions have seen widespread adoption and support by the most successful private-sector consumer and enterprise software technology companies.
 
