--- a/_plays/09.md
+++ b/_plays/09.md
@@ -1,6 +1,7 @@
-##### PLAY 9
-
-## Deploy in a flexible hosting environment
+---
+id: 9
+title: Deploy in a flexible hosting environment
+---
 
 Our services should be deployed on flexible infrastructure, where resources can be provisioned in real time to meet spikes in user demand. Our digital services are crippled when we host them in data centers which market themselves as “cloud hosting” but require us to manage and maintain hardware directly. This outdated practice wastes time, weakens our disaster recovery plans, and results in significantly higher costs.
 
@@ -18,7 +19,7 @@ Our services should be deployed on flexible infrastructure, where resources can 
 -	What hardware does your service use to run?
 -	What is the demand / usage pattern for your service?
 -	What happens to your service when it experiences a surge in traffic or load?
--	How much capacity is available in your hosting environment? 
+-	How much capacity is available in your hosting environment?
 -	How long does it take you to provision a new resource such as an application server?
 -	How have you designed your service to scale based on demand?
 -	How are you paying for your hosting infrastructure — i.e., by the minute, hourly, daily, monthly, fixed?
