--- a/_plays/10.md
+++ b/_plays/10.md
@@ -1,6 +1,7 @@
-##### PLAY 10
-
-## Automate testing and deployments
+---
+id: 10
+title: Automate testing and deployments
+---
 
 Today, developers write automated scripts that can verify thousands of scenarios in minutes and then deploy updated code into production environments multiple times per day. They use automated performance tests which simulate surges in traffic to identify performance bottlenecks. While manual tests and quality assurance is still necessary, automated tests provide consistent and reliable protection against unintentional regressions, and make it possible for developers to confidently release frequent updates to the service.
 
