--- a/_plays/11.md
+++ b/_plays/11.md
@@ -1,6 +1,7 @@
-##### PLAY 11
-
-## Manage security and privacy through reusable processes
+---
+id: 11
+title: Manage security and privacy through reusable processes
+---
 
 It is critical that our digital services protect sensitive information and keep systems secure. This is typically a process of continuous review and improvement which should be built into the development and maintenance of the service. At the start of designing a new service or feature, the team lead should engage the appropriate privacy, security, and legal officer(s) to discuss the type of information collected, how it should be secured, and how it may be used and shared. The sustained engagement of a privacy specialist helps ensure that personal data is properly managed. In addition, a key process to building a secure service is comprehensively testing and certifying the components in each layer of the technology stack for security vulnerabilities, and then to re-use these same pre-certified components for multiple services.
 
