--- a/_plays/04.md
+++ b/_plays/04.md
@@ -1,6 +1,7 @@
-##### PLAY 4
-
-## Build the service using agile and iterative practices
+---
+id: 4
+title: Build the service using agile and iterative practices
+---
 
 We should use an incremental, fast-paced style of software development to reduce the risk of failure by getting working software into users’ hands quickly, and by providing frequent opportunities for the delivery team members to adjust requirements and development plans based on watching people use prototypes and real software. A critical capability is being able to automatically test and deploy the service so that new features can be added often and easily put into production. Following agile methodologies is a proven best practice for building digital services, and will increase our ability to build services that effectively meet user needs.
 
@@ -25,5 +26,5 @@ We should use an incremental, fast-paced style of software development to reduce
 - What tool is being used to track bugs and issue tickets?
 - What tool is being used to manage the feature backlog?
 - How often do you review and reprioritize the items in your feature and bug backlog?
-- How do you collect user feedback during development and how is that feedback to improve the service? 
+- How do you collect user feedback during development and how is that feedback to improve the service?
 - At each stage of usability testing, what gaps were identified in addressing user needs?
