--- a/_plays/07.md
+++ b/_plays/07.md
@@ -1,6 +1,7 @@
-##### PLAY 7
-
-## Bring in experienced teams
+---
+id: 7
+title: Bring in experienced teams
+---
 
 We need talented people working in government who have experience creating modern digital services. This includes bringing in seasoned product managers, engineers, and designers. When outside help is needed, our teams should work with contracting officers who understand how to evaluate third-party technical competency so our teams can be paired with contractors who are good at both building and delivering effective digital services. The makeup and experience requirements of the team will vary depending on the scope of the project.
 
