--- a/_plays/13.md
+++ b/_plays/13.md
@@ -1,6 +1,7 @@
-##### PLAY 13
-
-## Default to open
+---
+id: 13
+title: Default to open
+---
 
 When we collaborate in the open and publish our data publicly we can improve Government together. By building services more openly and publishing open data, we simplify the public’s access to government services and information, allow the public to easily provide fixes and contributions, and enable reuse by entrepreneurs, nonprofits, other agencies, and the public.
 
@@ -12,7 +13,7 @@ When we collaborate in the open and publish our data publicly we can improve Gov
 5. Ensure that we maintain the rights to all data developed by third parties in such a manner that is releasable and reusable at no cost to the public
 6. Ensure that we maintain contractual rights to all custom software developed by third parties in such a manner that is publishable and reusable at no cost
 7. When appropriate, create an API for third parties to interact with the service directly
-8. When appropriate, publish source code of projects or components online 
+8. When appropriate, publish source code of projects or components online
 9. When appropriate, share your development process and progress publicly
 
 #### key questions
