--- a/_plays/08.md
+++ b/_plays/08.md
@@ -9,7 +9,7 @@ The technology decisions we make need to enable development teams to work effici
 1. Choose software frameworks that are commonly used by private-sector companies creating similar services
 2. To the extent practical, ensure that software can be deployed on a variety of commodity hardware types
 3. Ensure that each project has easy to understand instructions for setting up a local development environment, and that team members can be quickly added or removed from projects
-4. Consider open source software solutions at all layers of the stack
+4. [Consider open source software solutions](http://www.whitehouse.gov/sites/default/files/omb/assets/egov_docs/memotociostechnologyneutrality.pdf) at all layers of the stack
 
 #### key questions
 - What is your development stack and why did you choose it?
