Fixed grammar, typos

--- a/_plays/03.md
+++ b/_plays/03.md
@@ -15,7 +15,7 @@ Using a government service shouldn’t be stressful, confusing, or daunting — 
 7. Use language and design consistently throughout the service, including in the online and offline (non-digital) touch points people use to interact with the service
 
 #### key questions
-- What primary tasks are the user trying to accomplish?
+- What primary tasks is the user trying to accomplish?
 - What is the reading level of the language the service uses?
 - What languages is your service offered in?
 - If a user needs help while using the service how do they go about getting it?
