--- a/_plays/09.md
+++ b/_plays/09.md
@@ -3,7 +3,7 @@ id: 9
 title: Deploy in a flexible hosting environment
 ---
 
-Our services should be deployed on flexible infrastructure, where resources can be provisioned in real time to meet spikes in user demand. Our digital services are crippled when we host them in data centers which market themselves as “cloud hosting” but require us to manage and maintain hardware directly. This outdated practice wastes time, weakens our disaster recovery plans, and results in significantly higher costs.
+Our services should be deployed on flexible infrastructure, where resources can be provisioned in real-time to meet spikes in user demand. Our digital services are crippled when we host them in data centers which market themselves as “cloud hosting” but require us to manage and maintain hardware directly. This outdated practice wastes time, weakens our disaster recovery plans, and results in significantly higher costs.
 
 #### checklist
 1. Resources are provisioned on demand
