--- a/_plays/11.md
+++ b/_plays/11.md
@@ -10,7 +10,7 @@ The following checklist provides a starting point, but teams should work closely
 #### checklist
 1. Contact the appropriate privacy or legal officer of the department or agency to determine whether a System of Records Notice (SORN), Privacy Impact Assessment, or other review should be conducted
 2. Determine, in consultation with a records officer, what data is collected and why, how it is used or shared, how it is stored and secured, and how long it is kept
-3. Determine, in consultation with a privacy specialist, whether and how users are notified about how personal information is collected and used, including whether a privacy policy is needed and where it should appear, and how users will be notified in the event of a security breach
+3. Determine, in consultation with a privacy specialist, whether and how users are notified about how personal information is collected and used, whether a privacy policy is needed and where it should appear, and how users will be notified in the event of a security breach
 4. Consider whether the user should be able to access, delete, or remove their information from the service
 5. “Pre-certify” the hosting infrastructure used for the project using FedRAMP
 6. Use deployment scripts to ensure configuration of production environment remains consistent and controllable
