--- a/_plays/01.md
+++ b/_plays/01.md
@@ -3,7 +3,7 @@ id: 1
 title: Understand what people need
 ---
 
-We must begin digital projects by exploring and pinpointing the needs of the people who will use the service, and the ways in which the service will fit into their lives. Whether the users are members of the public or government employees, policy makers must include real people in their design process from the very beginning. The needs of people — not constraints of government structures or silos — should drive technical and design decisions. We need to continually test the products we build with real people to keep us honest about what is important.
+We must begin digital projects by exploring and pinpointing the needs of the people who will use the service, and the ways in which the service will fit into their lives. Whether the users are members of the public or government employees, policy makers must include real people in their design process from the beginning. The needs of people — not constraints of government structures or silos — should drive technical and design decisions. We need to continually test the products we build with real people to keep us honest about what is important.
 
 #### checklist
 1. Early in the project, spend time with current and prospective users of the service
@@ -12,7 +12,7 @@ We must begin digital projects by exploring and pinpointing the needs of the peo
 4. Document the findings about user goals, needs, behaviors, and preferences
 5. Share findings with the team and agency leadership
 6. Create a prioritized list of user stories, which are short descriptions of the goals the user is trying to accomplish
-7. As the digital service is being built, regularly test it with potential users to ensure it will meet peoples’ needs
+7. As the digital service is being built, regularly test it with potential users to ensure it will meet people's needs
 
 #### key questions
 - What user needs will this service address?
