--- a/_plays/02.md
+++ b/_plays/02.md
@@ -9,7 +9,7 @@ We must build digital services with an understanding of the range of ways a pers
 1. Understand the different points at which people will interact with the service – both online and in person
 2. Identify pain points in the current way users interact with the service, and prioritize these according to user needs
 3. Design the digital parts of the service so that they are integrated with the offline touch points people use to interact with the service
-4. Develop metrics that will measure how well the service is meeting user needs, at each step of the service
+4. Develop metrics that will measure how well the service is meeting user needs at each step of the service
 
 
 #### key questions
