Be consistent with existing guidance
>Projects within investments are encouraged to use modular development principles. All projects (regardless of 
>whether they use modular development principles) must produce usable functionality at intervals of no more than 
>six months. 

2016 IT Budget Guidance (http://www.whitehouse.gov/sites/default/files/omb/assets/egov_docs/fy_2016_guidance_06272014.pdf), page 24.

--- a/_plays/04.md
+++ b/_plays/04.md
@@ -6,7 +6,7 @@ title: Build the service using agile and iterative practices
 We should use an incremental, fast-paced style of software development to reduce the risk of failure by getting working software into users’ hands quickly, and by providing frequent opportunities for the delivery team members to adjust requirements and development plans based on watching people use prototypes and real software. A critical capability is being able to automatically test and deploy the service so that new features can be added often and easily put into production. Following agile methodologies is a proven best practice for building digital services, and will increase our ability to build services that effectively meet user needs.
 
 #### checklist
-1. Ship a functioning “minimum viable product” (MVP) that solves a core user need addressed by the service as soon as possible, and not longer than three months from the beginning of any new digital project, using a “beta” or “test” period if needed
+1. Ship a functioning “minimum viable product” (MVP) that solves a core user need addressed by the service as soon as possible, and not longer than six months from the beginning of any new digital project, using a “beta” or “test” period if needed
 2. Run usability tests frequently to see how well the service works for users, and identify improvements that should be made
 3. Ensure the individuals building the service are in close communication using techniques such as war rooms, daily standups, and team chat tools
 4. Keep delivery teams small and focused; limit organizational layers that separate these teams from the business owners
