--- a/_plays/11.md
+++ b/_plays/11.md
@@ -3,7 +3,7 @@ id: 11
 title: Manage security and privacy through reusable processes
 ---
 
-It is critical that our digital services protect sensitive information and keep systems secure. This is typically a process of continuous review and improvement which should be built into the development and maintenance of the service. At the start of designing a new service or feature, the team lead should engage the appropriate privacy, security, and legal officer(s) to discuss the type of information collected, how it should be secured, and how it may be used and shared. The sustained engagement of a privacy specialist helps ensure that personal data is properly managed. In addition, a key process to building a secure service is comprehensively testing and certifying the components in each layer of the technology stack for security vulnerabilities, and then to re-use these same pre-certified components for multiple services.
+Our digital services have to protect sensitive information and keep systems secure. This is typically a process of continuous review and improvement that should be built into the development and maintenance of the service. At the start of designing a new service or feature, the team lead should engage the appropriate privacy, security, and legal officers to discuss the type of information collected, how it should be secured, how long it is kept, and how it may be used and shared. The sustained engagement of a privacy specialist helps ensure that personal data is properly managed. In addition, a key process to building a secure service is comprehensively testing and certifying the components in each layer of the technology stack for security vulnerabilities, and then to reuse these same pre-certified components for multiple services.
 
 The following checklist provides a starting point, but teams should work closely with their privacy specialist and security engineer to meet the needs of the specific service.
 
@@ -16,9 +16,9 @@ The following checklist provides a starting point, but teams should work closely
 6. Use deployment scripts to ensure configuration of production environment remains consistent and controllable
 
 #### key questions
-- Does the service collect personal information from the user (whether government or public)?  How is the user notified of this collection?
-- Does it collect more information than is needed to perform the requested task? Are there uses of the data that would not be expected by the average user?
-- How does a user contact a responsible person to seek access, correction, deletion, or removal of his or her personal information?
-- Will information stored in the system be shared with others?
+- Does the service collect personal information from the user, whether government or public?  How is the user notified of this collection?
+- Does it collect more information than necessary? Could the data be used in ways an average user wouldn’t expect?
+- How does a user access, correct, delete, or remove personal information?
+- Will any of the personal information be shared with other services, people, or partners?
 - How and how often is the service tested for security vulnerabilities?
 - How can someone from the public report a security issue?
