--- a/_plays/01.md
+++ b/_plays/01.md
@@ -3,23 +3,23 @@ id: 1
 title: Understand what people need
 ---
 
-We must begin digital projects by exploring and pinpointing the needs of the people who will use the service, and the ways in which the service will fit into their lives. Whether the users are members of the public or government employees, policy makers must include real people in their design process from the very beginning. The needs of people — not constraints of government structures or silos — should drive technical and design decisions. We need to continually test the products we build with real people to keep us honest about what is important.
+We must begin digital projects by exploring and pinpointing the needs of the people who will use the service, and the ways the service will fit into their lives. Whether the users are members of the public or government employees, policy makers must include real people in their design process from the very beginning. The needs of people — not constraints of government structures or silos — should inform technical and design decisions. We need to continually test the products we build with to keep us honest about what’s important.
 
 #### checklist
 1. Early in the project, spend time with current and prospective users of the service
-2. Use a range of qualitative and quantitative user research methods to determine people’s goals, needs, and behaviors; be thoughtful about the time spent
-3. Test prototypes of possible solutions with real people, in the field if possible
+2. Use a range of qualitative and quantitative research methods to determine people’s goals, needs, and behaviors; be thoughtful about the time spent
+3. Test prototypes of solutions with real people, in the field if possible
 4. Document the findings about user goals, needs, behaviors, and preferences
 5. Share findings with the team and agency leadership
-6. Create a prioritized list of user stories, which are short descriptions of the goals the user is trying to accomplish
-7. As the digital service is being built, regularly test it with potential users to ensure it will meet peoples’ needs
+6. Create a prioritized list of user stories, or short descriptions of tasks the user is trying to accomplish
+7. As the digital service is being built, regularly test it with potential users to ensure it meets peoples’ needs
 
 #### key questions
-- What user needs will this service address?
+- What user needs will this address?
 - Why does the user want or need this service?
-- Who are your key users?
-- Which people will have the most difficulty with your service?
-- What research methods were used?
-- What were the key findings from users’ current experience?
+- Who are your primary users?
+- Which people will have the most difficulty with the service?
+- Which research methods were used?
+- What were the key findings?
 - How were the findings documented? Where can future team members access the documentation?
 - How often are you testing with real people?
