--- a/_plays/02.md
+++ b/_plays/02.md
@@ -3,7 +3,7 @@ id: 2
 title: Address the whole experience, from start to finish
 ---
 
-We must build digital services with an understanding of the range of ways a person might interact with our service, including the actions they take online, through a mobile application, on the phone, or in person. Every encounter should move the user closer towards the desired outcome, whether that encounter is online or offline.
+We need to understand the different ways people will interact with our services, including the actions they take online, through a mobile application, on a phone, or in person. Every encounter—whether it’s online or offline—should move the user closer towards their goal.
 
 #### checklist
 1. Understand the different points at which people will interact with the service – both online and in person
