--- a/_plays/09.md
+++ b/_plays/09.md
@@ -3,27 +3,27 @@ id: 9
 title: Deploy in a flexible hosting environment
 ---
 
-Our services should be deployed on flexible infrastructure, where resources can be provisioned in real time to meet spikes in user demand. Our digital services are crippled when we host them in data centers which market themselves as “cloud hosting” but require us to manage and maintain hardware directly. This outdated practice wastes time, weakens our disaster recovery plans, and results in significantly higher costs.
+Our services should be deployed on flexible infrastructure, where resources can be provisioned in real time to meet spikes in traffic and user demand. Our digital services are less effective when we host them in data centers that market themselves as “cloud hosting” but require us to manage and maintain hardware directly. This outdated practice wastes time, weakens disaster recovery plans, and results in significantly higher costs.
 
 #### checklist
 1. Resources are provisioned on demand
 2. Resources scale based on real-time user demand
 3. Resources are provisioned through an API
 4. Resources are available in multiple regions
-5. We pay only for the resources we use
+5. We only pay for resources we use
 6. Static assets are served through a content delivery network
 7. Application is hosted on commodity hardware
 
 #### key questions
 -	Where is your service hosted?
 -	What hardware does your service use to run?
--	What is the demand / usage pattern for your service?
+-	What is the demand or usage pattern for your service?
 -	What happens to your service when it experiences a surge in traffic or load?
 -	How much capacity is available in your hosting environment?
--	How long does it take you to provision a new resource such as an application server?
+-	How long does it take you to provision a new resource, like an application server?
 -	How have you designed your service to scale based on demand?
--	How are you paying for your hosting infrastructure — i.e., by the minute, hourly, daily, monthly, fixed?
--	Is your service hosted in multiple regions / availability zones / data centers?
+-	How are you paying for your hosting infrastructure (e.g., by the minute, hourly, daily, monthly, fixed)?
+-	Is your service hosted in multiple regions, availability zones, or data centers?
 -	In the event of a catastrophic disaster to a datacenter, how long will it take to have the service operational?
 -	What would be the impact of a prolonged downtime window?
 -	What data redundancy do you have built into the system, and what would be the impact of a catastrophic data loss?
