--- a/_plays/05.md
+++ b/_plays/05.md
@@ -5,6 +5,8 @@ title: Structure budgets and contracts to support delivery
 
 To improve our chances of success when contracting out development work, we need to work with experienced budgeting and contracting officers. In cases where we use third parties to help build a service, a well-defined contract can facilitate good development practices like conducting a research and prototyping phase, refining product requirements as the service is built, evaluating open source alternatives, ensuring frequent delivery milestones, and allowing the flexibility to purchase cloud computing resources.
 
+[The TechFAR Handbook](https://playbook.cio.gov/techfar/) provides a detailed explanation of the flexibilities in the Federal Acquisition Regulation (FAR) that can help agencies implement this play.
+
 #### checklist
 1. Budget includes research, discovery, and prototyping activities
 2. Contract is structured to request frequent deliverables and not multi-month milestones
