add post mortem question to play 12, addresses #55

--- a/_plays/12.md
+++ b/_plays/12.md
@@ -25,6 +25,7 @@ At all stages of a digital project, we should measure how well our service is wo
 - What is your service’s monthly uptime target?
 - What is your service’s monthly uptime percentage including scheduled maintenance? Excluding scheduled maintenance?
 - How does your team receive automated alarms when incidents occur?
+- How does your team respond to incidents? What is your post-mortem process?
 - What is the volume of each of your service’s top 10 transactions? What is the percentage of transactions started vs. completed?
 - What tool(s) are in place to measure user behavior?
 - What tool/technology is used for A/B testing?
