--- a/_plays/13.md
+++ b/_plays/13.md
@@ -12,7 +12,7 @@ When we collaborate in the open and publish our data publicly we can improve Gov
 4. Catalog data in the agency’s enterprise data inventory and add any public datasets to the agency’s public data listing
 5. Ensure that we maintain the rights to all data developed by third parties in such a manner that is releasable and reusable at no cost to the public
 6. Ensure that we maintain contractual rights to all custom software developed by third parties in such a manner that is publishable and reusable at no cost
-7. When appropriate, create an API for third parties to interact with the service directly
+7. When appropriate, create an API for third parties and internal users to interact with the service directly
 8. When appropriate, publish source code of projects or components online
 9. When appropriate, share your development process and progress publicly
 
