copy edits from issue #32

--- a/_plays/12.md
+++ b/_plays/12.md
@@ -10,7 +10,7 @@ At all stages of a digital project, we should measure how well our service is wo
 2. Monitor system performance, measuring response time, latency, throughput, and error rates in real-time
 3. Ensure monitoring in place can measure median, 95th percentile and 98th percentile performance
 4. Create automated alerts based on this monitoring
-5. Track concurrent users in real time, and monitor user behaviors (in the aggregate) to determine how well the service is meeting user needs
+5. Track concurrent users in real-time, and monitor user behaviors (in the aggregate) to determine how well the service is meeting user needs
 6. Publish metrics internally
 7. Publish metrics externally
 8. Use an experimentation tool that supports multivariate testing in production
