copy edit from issue #32

--- a/_plays/01.md
+++ b/_plays/01.md
@@ -12,7 +12,7 @@ We must begin digital projects by exploring and pinpointing the needs of the peo
 4. Document the findings about user goals, needs, behaviors, and preferences
 5. Share findings with the team and agency leadership
 6. Create a prioritized list of user stories, which are short descriptions of the goals the user is trying to accomplish
-7. As the digital service is being built, regularly test it with potential users to ensure it will meet peoples’ needs
+7. As the digital service is being built, regularly test it with potential users to ensure it will meet people’s needs
 
 #### key questions
 - Who are your key users?
