updated play 08 based on feedback from issue #46

--- a/_plays/08.md
+++ b/_plays/08.md
@@ -14,4 +14,4 @@ The technology decisions we make need to enable development teams to work effici
 #### key questions
 - What is your development stack and why did you choose it?
 - What database(s) are you using and why did you choose them?
-- How long does it take for a new team member to set up a local development environment?
+- How long does it take for a new team member to start developing?
