--- a/_plays/07.md
+++ b/_plays/07.md
@@ -9,7 +9,7 @@ We need talented people working in government who have experience creating moder
 1. Member(s) of the team have experience building popular, high-traffic digital services
 2. Member(s) of the team have experience designing mobile and web applications
 3. Member(s) of the team have experience using automated testing frameworks
-4. Member(s) of the team have experience with modern development and operations (DevOps) techniques such as continuous integration and continuous deployment
+4. Member(s) of the team have experience with modern development and operations (DevOps) techniques like continuous integration and continuous deployment
 5. Member(s) of the team have experience securing digital services
 6. A Federal contracting officer is on the internal team if a third party will be used for development work
 7. A Federal budget officer is on the internal team or is a partner
