--- a/_plays/10.md
+++ b/_plays/10.md
@@ -3,7 +3,7 @@ id: 10
 title: Automate testing and deployments
 ---
 
-Today, developers write automated scripts that can verify thousands of scenarios in minutes and then deploy updated code into production environments multiple times per day. They use automated performance tests which simulate surges in traffic to identify performance bottlenecks. While manual tests and quality assurance is still necessary, automated tests provide consistent and reliable protection against unintentional regressions, and make it possible for developers to confidently release frequent updates to the service.
+Today, developers write automated scripts that can verify thousands of scenarios in minutes and then deploy updated code into production environments multiple times a day. They use automated performance tests which simulate surges in traffic to identify performance bottlenecks. While manual tests and quality assurance are still necessary, automated tests provide consistent and reliable protection against unintentional regressions, and make it possible for developers to confidently release frequent updates to the service.
 
 #### checklist
 1. Create automated tests that verify all user-facing functionality
@@ -19,8 +19,8 @@ Today, developers write automated scripts that can verify thousands of scenarios
 - How long does it take to build, test, and deploy a new feature into production?
 - How frequently are builds created?
 - What test tools are used?
-- What deployment automation or continuous integration tools are used?
+- Which deployment automation or continuous integration tools are used?
 - What is the estimated maximum number of concurrent users who will want to use the system?
 - How many simultaneous users could the system handle, according to the most recent capacity test?
-- How does the service perform when you exceed the expected target usage volume? Does the service degrade gracefully or catastrophically?
+- How does the service perform when you exceed the expected target usage volume? Does it degrade gracefully or catastrophically?
 - What is your scaling strategy when demand increases suddenly?
