--- a/_plays/06.md
+++ b/_plays/06.md
@@ -3,14 +3,14 @@ id: 6
 title: Assign one leader and hold that person accountable
 ---
 
-There must be a single product owner who has the authority and responsibility across teams to assign tasks and work elements; make business, product, and technical decisions; and is accountable for the success or failure of the overall service. This product owner is ultimately responsible for how well the service is meeting the needs of its users, which is how a service should be evaluated. The product owner is responsible for ensuring the features are built and managing the feature and bug backlogs.
+There must be a single product owner who has the authority and responsibility to assign tasks and work elements; make business, product, and technical decisions; and be accountable for the success or failure of the overall service. This product owner is ultimately responsible for how well the service meets needs of its users, which is how a service should be evaluated. The product owner is responsible for ensuring that features are built and managing the feature and bug backlogs.
 
 #### checklist
 1. A product owner has been identified
 2. All stakeholders agree that the product owner has the authority to assign tasks and make decisions about features and technical implementation details
 3. The product owner has a product management background with technical experience to assess alternatives and weigh tradeoffs
-4. The product owner has a work plan that includes budget estimates and identification of funding sources
-5. The product owner has a strong relationship with his or her contracting officer
+4. The product owner has a work plan that includes budget estimates and identifies funding sources
+5. The product owner has a strong relationship with the contracting officer
 
 #### key questions
 - Who is the product owner?
