Aim for "Minimum useful feature" enhancements
"Minimum useful feature" is the counterpart to "minimum viable product" that applies when enhancing an existing user facing service with a major new capability (rather than creating an entirely separate service).

--- a/_plays/04.md
+++ b/_plays/04.md
@@ -8,14 +8,15 @@ We should use an incremental, fast-paced style of software development to reduce
 #### checklist
 1. Ship a functioning “minimum viable product” (MVP) that solves a core user need addressed by the service as soon as possible, and not longer than three months from the beginning of any new digital project, using a “beta” or “test” period if needed
 2. Run usability tests frequently to see how well the service works for users, and identify improvements that should be made
-3. Ensure the individuals building the service are in close communication using techniques such as war rooms, daily standups, and team chat tools
-4. Keep delivery teams small and focused; limit organizational layers that separate these teams from the business owners
-5. Release features and improvements multiple times each month
-6. Create a prioritized list of features and bugs, also known as the “feature backlog” and “bug backlog”
-7. Use an “issue tracker” to catalog features and bugs
-8. Use a source code version control system
-9. Ensure entire team has access to the issue tracker and version control system
-10. Use code reviews to ensure quality
+3. As with new services, when adding major new features to an existing service, identity a "minimum useful feature" that can be developed and deployed as soon as possible, again using a "beta" or "test" period if needed 
+4. Ensure the individuals building the service are in close communication using techniques such as war rooms, daily standups, and team chat tools
+5. Keep delivery teams small and focused; limit organizational layers that separate these teams from the business owners
+6. Release features and improvements multiple times each month
+7. Create a prioritized list of features and bugs, also known as the “feature backlog” and “bug backlog”
+8. Use an “issue tracker” to catalog features and bugs
+9. Use a source code version control system
+10. Ensure entire team has access to the issue tracker and version control system
+11. Use code reviews to ensure quality
 
 
 #### key questions
