Add questions to emphasize testing habits
These changes add questions to emphasize good testing habits over code coverage.

--- a/_plays/10.md
+++ b/_plays/10.md
@@ -3,7 +3,7 @@ id: 10
 title: Automate testing and deployments
 ---
 
-Today, developers write automated scripts that can verify thousands of scenarios in minutes and then deploy updated code into production environments multiple times per day. They use automated performance tests which simulate surges in traffic to identify performance bottlenecks. While manual tests and quality assurance is still necessary, automated tests provide consistent and reliable protection against unintentional regressions, and make it possible for developers to confidently release frequent updates to the service.
+Today, developers write automated scripts that can verify thousands of scenarios in minutes and then deploy updated code into production environments multiple times per day. They use automated performance tests which simulate surges in traffic to identify performance bottlenecks. While manual tests and quality assurance are still necessary, automated tests provide consistent and reliable protection against unintentional regressions, and make it possible for developers to confidently release frequent updates to the service.
 
 #### checklist
 1. Create automated tests that verify all user-facing functionality
@@ -14,11 +14,14 @@ Today, developers write automated scripts that can verify thousands of scenarios
 
 
 #### key questions
+- Are developers writing tests for all code they commit, whether for bug fixes or new features?
+- What criteria do developers and code reviewers use to determine whether bug fixes and new features are sufficiently covered by automated tests?
+- Does project documentation, such as a README, clearly explain how to run all automated tests against the software? 
+- What test tools are used?
 - What percentage of the code base is covered by automated tests?
 - How long does it take to build, test, and deploy a typical bug fix?
 - How long does it take to build, test, and deploy a new feature into production?
 - How frequently are builds created?
-- What test tools are used?
 - What deployment automation or continuous integration tools are used?
 - What is the estimated maximum number of concurrent users who will want to use the system?
 - How many simultaneous users could the system handle, according to the most recent capacity test?
